--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -34,19 +34,17 @@
     </environment>
     
     <environment names="Development">
-        <link href="~/lib/slick/slick.css" rel="stylesheet" />
-        <link href="~/lib/slick/slick-theme.css" rel="stylesheet" />
-        <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
-        <link rel="stylesheet" href="~/css/site.component.css" />
-        <link href="~/css/shared/header.css" rel="stylesheet" />
-        <link href="~/css/shared/footer.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/shared/header.css" />
+        <link rel="stylesheet" href="~/css/shared/footer.css" />
         <link rel="stylesheet" href="~/css/basket/basket.component.css" />
+        <link rel="stylesheet" href="~/css/basket/basket-status/basket-status.component.css" />
         <link rel="stylesheet" href="~/css/catalog/pager.css" />
         <link rel="stylesheet" href="~/css/catalog/catalog.css" />
-        <link rel="stylesheet" href="~/css/basket/basket-status/basket-status.component.css" />
         <link rel="stylesheet" href="~/css/orders/orders.component.css" />
-        <link href="~/css/customize/customize.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/customize/customize.css" />
+        <link href="~/lib/slick-carousel/slick.css" rel="stylesheet" />
+        <link href="~/lib/slick-carousel/slick-theme.css" rel="stylesheet" />
     </environment>
     <environment names="Staging,Production">
         @*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"
@@ -177,7 +175,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js"></script>
-        <script src="~/lib/slick/slick.js"></script>
+        <script src="~/lib/slick-carousel/slick.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
@@ -187,8 +185,8 @@
                 crossorigin="anonymous"
                 integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
         </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"
-                asp-fallback-src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
+                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
         <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
                 asp-fallback-src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js">
