--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -174,7 +174,7 @@
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js"></script>
+        <script src="~/lib/font-awesome/js/all.js"></script>
         <script src="~/lib/slick-carousel/slick.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
@@ -188,8 +188,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
-        <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
-                asp-fallback-src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js">
+        <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+                asp-fallback-src="~/lib/font-awesome/js/all.min.js">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="//code.tidio.co/ezibky1uftop7d5dtokyrddyim1xvllc.js"></script>
