--- a/src/Web/DamaWeb/wwwroot/css/_custom-variables.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_custom-variables.scss
@@ -2,21 +2,23 @@
 // You can find them in node_modules/bootstrap/scss/_variables.scss
 // Copy the variables you need into this file, don't modify files under node_modules/
 
+/* Inputs */
+$input-border-radius: 0;
+$input-focus-border-color: #5fcbcb;
+
+/* Links */
+$link-color: #000000;
+$link-hover-color: #EF7C8D;
 // @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
 // Some example variables that you can uncomment:
-
 // Enabling shadows and gradients
 //$enable-shadows: true;
 //$enable-gradients: true;
-
 // Changing the body background and text
 //$body-bg: #b6ff00;
 //$body-color: #151417;
-
 // Changing the border radius of buttons
 //$border-radius: 15px;
-
 // Changing the theme colors
 //$primary: #00acc8; //#007f8c;
 //$secondary: #436296;
@@ -31,3 +33,4 @@
 //  "cool": #4d3fa3
 //);
 //$font-family-sans-sewowrif: -apple-system, BlinkMacSystemFont, "Open Sans", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
