working on _custom-styles

--- a/src/Web/DamaWeb/Pages/Account/ExternalLogin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ExternalLogin.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Registo";
 }
 
-<h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
+<h2>@ViewData["Title"]</h2>
 <h4>Associa a tua conta @Model.LoginProvider.</h4>
 
 
