--- a/src/Web/DamaWeb/Pages/Account/ForgotPassword.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ForgotPassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Esqueceu-se a password?";
 }
 
-<h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
+<h2>@ViewData["Title"]</h2>
 <h4>Escreva o seu email.</h4>
 <hr />
 <div class="row">
