--- a/src/Web/DamaWeb/Pages/Basket/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Carrinho";
 }
-<h1 class="dama-heading-normal-font">Carrinho</h1>
+<h2>Carrinho</h2>
 @*<div class="container">*@
 
 @if (Model.BasketModel.Items.Any())
