--- a/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
@@ -18,7 +18,7 @@
     <div class="dama-customize pt-sm-5 pt-2">
         <div class="row mb-3">
             <div class="offset-sm-3 col-sm-6 col-12 text-center">
-                <h2>A Personalizar...</h2>
+                <h2 class="lily">A Personalizar...</h2>
                 <div class="mt-1">
                     <h3><span class="badge badge-pill badge-light">2</span></h3>
                 </div>
