--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -44,7 +44,7 @@
 @if (Model.CatalogModel.NewCatalogItems.Any())
 {
     <div class="news-heading text-center">
-        <h2>Novidades</h2>
+        <h2 class="lily">Novidades</h2>
         <img class="separator" src="~/images/barra-coracao.png" />
     </div>
 
@@ -64,7 +64,7 @@
 @if (Model.CatalogModel.FeaturedCatalogItems.Any())
 {
     <div class="news-heading text-center">
-        <h2>Destaques</h2>
+        <h2 class="lily">Destaques</h2>
         <img class="separator" src="~/images/barra-coracao.png" />
     </div>
 
