--- a/src/Web/DamaWeb/Pages/Order/Detail.cshtml
+++ b/src/Web/DamaWeb/Pages/Order/Detail.cshtml
@@ -16,7 +16,7 @@
 
 <div class="esh-orders_detail">
     <div class="container">
-        <h2 class="dama-heading-normal-font">@ViewData["Title"] &nbsp; #@Model.OrderDetails.OrderNumber</h2>
+        <h2>@ViewData["Title"] &nbsp; #@Model.OrderDetails.OrderNumber</h2>
         <section class="esh-orders_detail-section">
             <article class="esh-orders_detail-titles row d-none d-sm-flex">
                 <section class="esh-orders_detail-title col-3">Nº Encomenda</section>
