--- a/src/Web/DamaWeb/Pages/Order/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Order/Index.cshtml
@@ -16,7 +16,7 @@
 
 <div class="esh-orders">
     <div class="container">
-        <h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
+        <h2>@ViewData["Title"]</h2>
         <div class="text-center">
             <img class="separator" src="~/images/barra-coracao.png" />
         </div>
