--- a/src/Web/DamaWeb/Pages/Account/Manage/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Manage/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Perfil";
 }
 
-<h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
+<h2>@ViewData["Title"]</h2>
 @await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
