--- a/src/Web/DamaWeb/Pages/Account/ResetPassword.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ResetPassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Recuperar password";
 }
 
-<h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
+<h2>@ViewData["Title"]</h2>
 <h4>Recupere a sua password.</h4>
 <hr />
 <div class="row">
