--- a/src/Web/DamaWeb/Pages/Account/Signin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Signin.cshtml
@@ -9,7 +9,7 @@
 <div class="account-login-container">
     <div class="row">
         <div class="col-sm-5">
-            <h2 class="dama-heading-normal-font">Login</h2>
+            <h2>Login</h2>
             <section>
                 <h4>Para fazer Login usa a tua conta de Facebook ou Google.</h4>
                 <form asp-page="./ExternalLogin" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
@@ -73,7 +73,7 @@
             </section>
         </div>
         <div class="offset-sm-1 col-sm-5">
-            <h2 class="dama-heading-normal-font">Registo</h2>
+            <h2>Registo</h2>
             <section>
                 <h4>Para fazeres o teu registo, preenche os campos abaixo.</h4>
                 <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="Register" method="post">
