--- a/src/Web/DamaWeb/Pages/Category/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Index.cshtml
@@ -41,7 +41,7 @@
     @if (Model.CategoryModel.CatalogModel.NewCatalogItems.Any())
     {
         <div class="news-heading text-center">
-            <h2>Novidades</h2>
+            <h2 class="lily">Novidades</h2>
             <img class="separator" src="~/images/barra-coracao.png" />
         </div>
 
@@ -60,7 +60,7 @@
     @if (Model.CategoryModel.CatalogModel.CatalogItems.Any())
     {
         <div id="todos" class="news-heading text-center">
-            <h2>Todos os Produtos</h2>
+            <h2 class="lily">Todos os Produtos</h2>
             <img class="separator" src="~/images/barra-coracao.png" />
         </div>
         <div class="container">
