--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -9,7 +9,7 @@
 <h1 class="title">@Model.CatalogTypeModel.Name</h1>
 
 <div id="todos" class="news-heading text-center">
-    <h2>Todos os Produtos</h2>
+    <h2 class="lily">Todos os Produtos</h2>
     <img class="separator" src="~/images/barra-coracao.png" />
 </div>
 <div class="container">
