--- a/src/Web/DamaWeb/Pages/Customize/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Index.cshtml
@@ -37,7 +37,7 @@
 <form method="post">
     <div class="dama-customize pt-sm-5 pt-2">
         <div class="text-center">
-            <h2>Vamos Começar?</h2>
+            <h2 class="lily">Vamos Começar?</h2>
             <div class="mt-1">
                 <h3><span class="badge badge-pill badge-light">1</span></h3>
             </div>
