--- a/src/Web/DamaWeb/Pages/Account/ExternalLogin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ExternalLogin.cshtml
@@ -36,7 +36,7 @@
                 <input asp-for="Input.SubscribeNewsletter" class="form-check-input">
                 <label class="form-check-label small" asp-for="Input.SubscribeNewsletter"></label>
             </div>
-            <button type="submit" class="btn btn-dama-menta">Associar</button>
+            <button type="submit" class="btn btn-sm btn-menta">Associar</button>
         </form>
     </div>
 </div>
