--- a/src/Web/DamaWeb/Pages/Account/Manage/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Manage/Index.cshtml
@@ -50,7 +50,7 @@
                 <input asp-for="Input.NIF" class="form-control" />
                 <span asp-validation-for="Input.NIF" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-dama-menta">Gravar</button>
+            <button type="submit" class="btn btn-sm btn-menta">Gravar</button>
         </form>
     </div>
 </div>
