--- a/src/Web/DamaWeb/Pages/Account/Signin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Signin.cshtml
@@ -31,7 +31,7 @@
                                 }
                                 else
                                 {
-                                    <button type="submit" class="btn btn-dama-menta" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="btn btn-sm btn-menta" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                                 }
                             }
                         </p>
