--- a/src/Web/DamaWeb/Pages/Customize/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Index.cshtml
@@ -83,7 +83,7 @@
             </div>
             <div class="row go-section sr-only">
                 <div class="offset-sm-9 col-sm-2 offset-3 col-6">
-                    <button type="submit" class="btn btn-dama-menta mt-sm-0 mr-sm-3 mt-3">Próximo passo &rarr;</button>
+                    <button type="submit" class="btn btn-sm btn-menta mt-sm-0 mr-sm-3 mt-3">Próximo passo &rarr;</button>
                 </div>
             </div>
         }
