--- a/src/Web/DamaWeb/Pages/Customize/Step3.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step3.cshtml
@@ -62,10 +62,10 @@
                 <div class="offset-sm-3 col-sm-6 col-12">
                     <div class="row pr-0 m-0">
                         <div class="col-sm-2 col-3">
-                            <a asp-page="./Step2" asp-route-id="@Model.CustomizeModel.CatalogItemId" class="btn btn-dama-menta mt-0 mr-3 text-white" role="button">&larr; Voltar</a>
+                            <a asp-page="./Step2" asp-route-id="@Model.CustomizeModel.CatalogItemId" class="btn btn-sm btn-menta mt-0 mr-3" role="button">&larr; Voltar</a>
                         </div>
                         <div class="offset-sm-7 col-sm-3 offset-3 col-6">
-                            <button type="submit" class="btn btn-dama-pink mt-0 mr-3 w-100" asp-page-handler="Submit">ADICIONAR AO CARRINHO</button>
+                            <button type="submit" class="btn btn-primary mt-0 mr-3 w-100" asp-page-handler="Submit">ADICIONAR AO CARRINHO</button>
                         </div>
                     </div>
                 </div>
