--- a/src/Web/DamaWeb/Pages/Product/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/Index.cshtml
@@ -95,12 +95,12 @@
 
             //Add Name Click Event
             $('#addName').on('shown.bs.collapse', function () {
-                $('#btnAddName').removeClass('btn-dama-menta').addClass('btn-outline-menta');
+                $('#btnAddName').removeClass('btn-menta').addClass('btn-outline-menta');
                 $('#divCustomizeTotal').hide();
                 $('#txtDeliveryStockTime').hide();
             });
             $('#addName').on('hidden.bs.collapse', function () {
-                $('#btnAddName').removeClass('btn-outline-menta').addClass('btn-dama-menta');
+                $('#btnAddName').removeClass('btn-outline-menta').addClass('btn-menta');
                 $('#divCustomizeTotal').show();
                 $('#txtDeliveryStockTime').show();
             });
