--- a/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
@@ -18,7 +18,7 @@
                 Este site utiliza cookies. Se continuas a navegar, consideramos que aceitas o seu uso. Para mais informações clica na nossa <a asp-page="/Privacy">política de privacidade.</a>
             </span>
             <div class="consentText ml-xl-1 mr-xl-auto order-1 order-xl-3">
-                <button type="button" class="btn btn-dama-pink navbar-btn btn-sm" data-cookie-string="@cookieString">Fechar</button>
+                <button type="button" class="btn btn-primary navbar-btn btn-sm" data-cookie-string="@cookieString">Fechar</button>
             </div>
         </div>
     </nav>
