--- a/src/Web/DamaWeb/wwwroot/css/_custom-variables.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_custom-variables.scss
@@ -56,8 +56,5 @@ $btn-border-radius: 0;
 //$light: #dfe6ee;
 //$dark: #303745;
 // Adding (!) an additional theme color (ex. classes btn-cool, bg-cool)
-//$theme-colors: (
-//  "cool": #4d3fa3
-//);
+$theme-colors: ( "menta": #88C9AC );
 //$font-family-sans-sewowrif: -apple-system, BlinkMacSystemFont, "Open Sans", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
