--- a/src/Web/DamaWeb/Pages/Account/ForgotPassword.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ForgotPassword.cshtml
@@ -16,7 +16,7 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-dama-menta">Enviar</button>
+            <button type="submit" class="btn btn-sm btn-menta">Enviar</button>
         </form>
     </div>
 </div>
