--- a/src/Web/DamaWeb/Pages/Account/ResetPassword.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ResetPassword.cshtml
@@ -27,7 +27,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-dama-menta">Recuperar</button>
+            <button type="submit" class="btn btn-sm btn-menta">Recuperar</button>
         </form>
     </div>
 </div>
