--- a/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
@@ -128,10 +128,10 @@
             <div class="offset-sm-2 col-sm-8 col-12 p-sm-0">
                 <div class="row pr-sm-0 m-0">
                     <div class="col-sm-2 col-3">
-                        <a asp-page="./Index" asp-route-CategoryId="@Model.CustomizeModel.CategoryId" asp-route-CatalogItemId="@Model.CustomizeModel.CatalogItemId" class="btn btn-dama-menta mt-0 mr-3 text-white" role="button">&larr; Voltar</a>
+                        <a asp-page="./Index" asp-route-CategoryId="@Model.CustomizeModel.CategoryId" asp-route-CatalogItemId="@Model.CustomizeModel.CatalogItemId" class="btn btn-sm btn-menta mt-0 mr-3" role="button">&larr; Voltar</a>
                     </div>
                     <div class="offset-sm-7 col-sm-3 offset-3 col-6">
-                        <button type="submit" class="btn btn-dama-pink mt-0 mr-3">Adicionar ao carrinho</button>
+                        <button type="submit" class="btn btn-sm btn-primary mt-0 mr-3">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
