remove link-dama-menta

--- a/src/Web/DamaWeb/Pages/Account/Signin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Signin.cshtml
@@ -115,7 +115,7 @@
                     <div class="form-group">
                         <div class="form-check">
                             <input asp-for="UserDetails.AgreeToTerms" class="form-check-input" />
-                            <label asp-for="UserDetails.AgreeToTerms" class="form-check-label small">Declaro que li e aceito os <a class="link-dama-menta" href="https://www.damanojornal.com/termos-e-condicoes/" target="_blank">Termos e Condições</a>.</label>
+                            <label asp-for="UserDetails.AgreeToTerms" class="form-check-label small">Declaro que li e aceito os <a class="text-menta link-underline" href="https://www.damanojornal.com/termos-e-condicoes/" target="_blank">Termos e Condições</a>.</label>
                         </div>
                         <span asp-validation-for="UserDetails.AgreeToTerms" class="text-danger small"></span>
                     </div>
