--- a/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
@@ -51,13 +51,11 @@ hr {
     color: #fff;
 }
 
-/* VOU AQUI */
-
-.link-dama-menta {
-    color: #88C9AC;
+.link-underline {    
     text-decoration: underline;
 }
 
+/* VOU AQUI */
 .dama-small-text {
     font-size: 0.7rem;
 }
