--- a/src/Web/DamaWeb/wwwroot/css/catalog/catalog.css
+++ b/src/Web/DamaWeb/wwwroot/css/catalog/catalog.css
@@ -29,7 +29,7 @@
     text-decoration: underline;
 }
 
-    .link-dama-black:hover, .link-dama-menta:hover {
+    .link-dama-black:hover {
         color: #58AD87;
     }
 
