--- a/src/Web/DamaWeb/wwwroot/css/site.css
+++ b/src/Web/DamaWeb/wwwroot/css/site.css
@@ -16,6 +16,7 @@
 
 /* Headings */
 /* Buttons */
+/* Colors */
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -6465,11 +6466,10 @@ hr {
 .btn-menta:hover {
   color: #fff; }
 
-/* VOU AQUI */
-.link-dama-menta {
-  color: #88C9AC;
+.link-underline {
   text-decoration: underline; }
 
+/* VOU AQUI */
 .dama-small-text {
   font-size: 0.7rem; }
 
