--- a/src/Web/DamaWeb/Pages/Product/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/Index.cshtml
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="col mt-4">            
-            <a href="javascript:history.go(-1)" class="link-dama-menta" >&larr; Voltar</a>
+            <a href="javascript:history.go(-1)" class="text-menta link-underline" >&larr; Voltar</a>
         </div>
     </div>
     <div class="col-md-5">
