--- a/src/Web/DamaWeb/Pages/Order/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Order/Index.cshtml
@@ -59,7 +59,7 @@
                         @Html.DisplayFor(modelItem => item.Status)
                     </section>
                     <section class="esh-orders-item col-12 col-sm-1">
-                        <a class="btn btn-dama-blue btn-block d-sm-none" role="button" asp-page="Detail" asp-route-orderId="@item.OrderNumber">Ver Detalhe</a>
+                        <a class="btn btn-menta btn-block d-sm-none" role="button" asp-page="Detail" asp-route-orderId="@item.OrderNumber">Ver Detalhe</a>
                         <a class="esh-orders-link-detail d-none d-sm-block" asp-page="Detail" asp-route-orderId="@item.OrderNumber">Detalhe</a>
                     </section>
                     <section class="esh-orders-item col-12 col-sm-1 mt-2 mb-2 mt-sm-0 mb-sm-0">
