--- a/src/Web/DamaWeb/Pages/Search/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Search/Index.cshtml
@@ -8,7 +8,7 @@
     }
 }
 
-<p id="todos" class="title">Resultados para @Model.SearchFor</p>
+<h2 id="todos" class="title">Resultados para @Model.SearchFor</h2>
 
     <div class="news-heading text-center">
         <img class="separator" src="~/images/barra-coracao.png" />
