--- a/src/Web/DamaWeb/Pages/Tag/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Tag/Index.cshtml
@@ -9,7 +9,7 @@
     }
 }
 
-<h2 id="todos">Resultados para: @Model.TagName</h2>
+<h2 id="todos" class="title">Resultados para: @Model.TagName</h2>
 
 <div class="news-heading text-center">
     <img class="separator" src="~/images/barra-coracao.png" />
