--- a/src/Web/DamaWeb/wwwroot/css/_custom-variables.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_custom-variables.scss
@@ -36,6 +36,8 @@ $h4-font-size: 1.25rem;
 $primary: #FC629D;
 $btn-border-width: 0;
 $btn-border-radius: 0;
+$btn-border-radius-lg: 0;
+$btn-border-radius-sm: 0;
 
 /* Colors */
 $theme-colors: ( "menta": #88C9AC );
