--- a/src/Web/DamaWeb/wwwroot/css/basket/basket.component.css
+++ b/src/Web/DamaWeb/wwwroot/css/basket/basket.component.css
@@ -73,6 +73,7 @@
 }
 
     .esh-basket-checkout:hover {
+        color: #fff;
         background-color: #FC2A7B;
         transition: all 0.35s;
     }
