--- a/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                             <div class="text-center mt-3">
-                                <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="Finalizar Encomenda" />
+                                <input class="btn btn-primary p-1 m-auto" type="submit" value="Finalizar Encomenda" />
                             </div>
                         </div>
                     </div>
@@ -253,11 +253,9 @@
                     <section class="col-12 dama-small-text"><small>* O preço dos produtos personalizados serão definidos após a análise do pedido e enviado por email ao cliente</small></section>
                 </article>
             }
-            <article class="row">
-                <section class="col-12">
-                    <div class="dama-checkout-btn mb-3 float-right mt-3 mt-sm-0">
-                        <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="Finalizar Encomenda" />
-                    </div>
+            <article class="row mt-3 mt-sm-2">
+                <section class="col-12 mb-3 float-right">
+                    <input class="btn btn-primary btn-block p-1 m-auto" type="submit" value="Finalizar Encomenda" />
                 </section>
             </article>
         </div>
