--- a/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
@@ -39,7 +39,7 @@ hr {
     background-color: #fff;
     border-top: 2px dashed #FC629D;
 }
-.btn-primary{
+.btn-primary, .btn-primary:hover{
     color: #fff;
 }
 
@@ -111,7 +111,7 @@ hr {
 
 /*** SEARCH PAGE ***/
 
-p.title {
+p.title, h2.title {
     font-family: "Quicksand Medium", sans-serif;
     font-size: 20px;
     color: #FC629D;
