--- a/src/Web/DamaWeb/Pages/Components/Basket/Default.cshtml
+++ b/src/Web/DamaWeb/Pages/Components/Basket/Default.cshtml
@@ -5,12 +5,12 @@
     ViewData["Title"] = "My Basket";
 }
 
-<a class="esh-basketstatus "
+<a class="dnj-basketstatus "
    asp-page="/Basket/Index">
-        <div class="esh-basketstatus-image">
+        <div class="dnj-basketstatus-image">
             <img src="~/images/cart.png" />
         </div>
-        <div class="esh-basketstatus-badge">
+        <div class="dnj-basketstatus-badge">
             @Model.ItemsCount
         </div>
 </a>
