--- a/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
@@ -3,14 +3,14 @@
 @if (Context.User.Identity.IsAuthenticated)
 {
     <li class="nav-item list-inline-item">
-        <a class="nav-link esh-identity-item px-0 px-sm-3"
+        <a class="nav-link dnj-identity-item px-0 px-sm-3"
            asp-page="/Order/Index">
             <i class="fas fa-shopping-bag fa-lg"></i>
             <span class="d-none d-sm-inline">Minhas Encomendas</span>
         </a>
     </li>
     <li class="nav-item list-inline-item">
-        <a class="nav-link esh-identity-item px-0 px-sm-3"
+        <a class="nav-link dnj-identity-item px-0 px-sm-3"
            asp-page="/Account/Manage/Index">
             <i class="fas fa-user fa-lg"></i>
             <span class="d-none d-sm-inline">Minha Conta</span>
@@ -19,7 +19,7 @@
     <li class="nav-item list-inline-item">
         <form asp-controller="Account" asp-action="Logout" method="post"
               id="logoutForm">
-            <a class="nav-link esh-identity-item px-0 px-sm-3"
+            <a class="nav-link dnj-identity-item px-0 px-sm-3"
                href="javascript:document.getElementById('logoutForm').submit()">
                 <i class="fas fa-sign-out-alt fa-lg"></i>
                 <span class="d-none d-sm-inline">Sair</span>
