--- a/src/Web/DamaWeb/wwwroot/css/basket/basket-status/basket-status.component.css
+++ b/src/Web/DamaWeb/wwwroot/css/basket/basket-status/basket-status.component.css
@@ -1,4 +1,4 @@
-﻿.esh-basketstatus {
+﻿.dnj-basketstatus {
     cursor: pointer;
     display: inline-block;
     float: right;
@@ -6,27 +6,27 @@
     transition: all 0.35s;
 }
 
-    .esh-basketstatus.is-disabled {
+    .dnj-basketstatus.is-disabled {
         opacity: .5;
         pointer-events: none;
     }
 
-.esh-basketstatus-image {
+.dnj-basketstatus-image {
     height: 36px;
     margin-top: .5rem;
 }
 
 @media (max-width: 576px) {
-    .esh-basketstatus-image {
+    .dnj-basketstatus-image {
         height: 26px;
     }
-    .esh-basketstatus-image img {
+    .dnj-basketstatus-image img {
         height: 26px;
         margin-top: 7px;
     }
 }
 
-.esh-basketstatus-badge {
+.dnj-basketstatus-badge {
     background-color: #FC629D;
     border-radius: 50%;
     color: #FFFFFF;
@@ -41,7 +41,7 @@
     width: 1.6rem;
 }
 @media (max-width: 576px) {
-    .esh-basketstatus-badge {
+    .dnj-basketstatus-badge {
         height: 1rem;
         width: 1rem;
         font-size: 12px;
@@ -49,7 +49,7 @@
     }
 }
 
-.esh-basketstatus-badge-inoperative {
+.dnj-basketstatus-badge-inoperative {
     background-color: #ff0000;
     border-radius: 50%;
     color: #FFFFFF;
@@ -64,7 +64,7 @@
     width: 1.5rem;
 }
 
-.esh-basketstatus:hover .esh-basketstatus-badge {
+.dnj-basketstatus:hover .dnj-basketstatus-badge {
     background-color: #FC2A7B;
     color: #fff;
     transition: all 0.35s;
